src/App.css
/* Global Variables */

:root {
  --orange: #d87d4a;
  --light-orange: #fbaf85;
  --font: "Manrope Variable", sans-serif;
  --transition: 300ms ease-in-out;
}

/* Global Styles */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--font);
}

#root {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
  margin: 0 auto;
  min-height: 100vh;
}

/* Typography */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  text-transform: uppercase;
}

h1 {
  font-size: 3.5rem;
  line-height: 3.625rem;
  letter-spacing: 0.125rem;
  margin-bottom: 2rem;
}

h2 {
  font-size: 2.5rem;
  line-height: 2.75rem;
  letter-spacing: 0.08931rem;
  margin-bottom: 1.5rem;
}

h3 {
  font-size: 2rem;
  line-height: 2.25rem;
  letter-spacing: 0.07rem;
  margin-bottom: 1.5rem;
}

h4 {
  font-size: 1.75rem;
  letter-spacing: 0.125rem;
}

h5 {
  font-size: 1.5rem;
  letter-spacing: 0.11rem;
  margin-bottom: 1rem;
}

h6 {
  font-size: 1.125rem;
  letter-spacing: 0.08038rem;
  margin-bottom: 1rem;
}

p {
  color: #7d7d7d;
  font-size: 0.94rem;
  line-height: 1.5625rem;
  margin-bottom: 1rem;
}

.overline {
  font-size: 0.875rem;
  letter-spacing: 0.625rem;
  margin-bottom: 1rem;
  text-transform: uppercase;
}

.orange-text {
  color: var(--orange);
}

/* Buttons */

button {
  cursor: pointer;
  font-family: inherit;
  font-size: 0.8125rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 0.0625rem;
  text-transform: uppercase;
  width: 10rem;
  height: 3rem;
  margin: 1rem 0;
  transition: var(--transition);
}

button.orange {
  background: var(--orange);
  border: none;
  color: #fff;
}

button.orange:hover {
  background: var(--light-orange);
}

button.black {
  background: #000;
  border: none;
  color: #fff;
}

button.black:hover {
  background: #4c4c4c;
}

button.clear {
  color: #000;
}

button.clear:hover {
  background: #000;
  border: none;
  color: #fff;
}

button.minimal {
  background: transparent;
  border: none;
  color: rgba(0, 0, 0, 0.5);
  position: relative;
}

button.minimal span {
  color: var(--orange);
  font-size: 1.3rem;
  font-weight: 400;
  position: absolute;
  bottom: 11px;
  margin-left: 0.5rem;
}

button.minimal:hover {
  color: var(--orange);
}

button:active {
  transform: scale(0.97);
}

button:focus-visible,
a:focus-visible,
input:focus-visible {
  outline: 2px solid var(--orange);
  outline-offset: 3px;
}

/* Layout */

header {
  background-color: #0e0e0e;
  color: #fff;
  padding: 0 9rem;
  position: relative;
  width: 100vw;
}

.header-wrap {
  align-items: center;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  display: flex;
  gap: 2rem;
  justify-content: space-between;
  height: 6rem;
}

nav ul {
  display: flex;
  gap: 2rem;
}

nav ul li {
  list-style: none;
}

nav ul li a {
  color: #fff;
  font-size: 0.7rem;
  font-weight: 700;
  letter-spacing: 2px;
  text-decoration: none;
  text-transform: uppercase;
  transition: var(--transition);
}

nav ul li a:hover {
  color: var(--orange);
}

.menu-icon {
  background: transparent;
  border: none;
  color: #fff;
  cursor: pointer;
  display: none;
  width: unset;
  height: unset;
}

.mobile-nav {
  background-color: #fff;
  border-radius: 0 0 1rem 1rem;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0 2rem;
  position: absolute;
  top: 6rem;
  left: 0;
  width: 100vw;
  z-index: 2;
}

.mobile-nav h6 {
  color: #000;
}

.overlay {
  inset: 0;
  position: fixed;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.active {
  color: var(--orange);
}

footer {
  background-color: #131313;
  display: flex;
  justify-content: center;
  width: 100vw;
}

.footer-wrap {
  color: #fff;
  font-size: 0.9rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 3rem 5rem;
  padding: 3rem 0;
  width: 70rem;
  position: relative;
}

.footer-wrap::before {
  background-color: var(--orange);
  content: "";
  width: 6.3rem;
  height: 0.25rem;
  position: absolute;
}

footer p {
  color: #fff;
  line-height: 1.5rem;
  opacity: 0.5;
}

footer nav {
  justify-self: end;
}

.social-icons {
  align-self: end;
  justify-self: end;
  display: flex;
  gap: 1rem;
  align-items: center;
}

footer svg {
  color: #fff;
  cursor: pointer;
  transition: var(--transition);
}

footer svg:hover {
  color: var(--orange);
}

/* Content area */

.outlet {
  width: 100vw;
}

.shop-wrap {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin: auto;
  margin-bottom: 4rem;
  max-width: 1440px;
}

.content-wrap {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem 0;
  margin: auto;
  width: 70rem;
}

/* Home page */

.hero-area {
  background:
    radial-gradient(transparent, #0e0e0e 75%),
    url("/assets/home/desktop/image-hero.jpg") center/cover;
  color: #fff;
  display: flex;
  align-items: center;
  height: 39rem;
  padding: 0 9rem;
  width: 100vw;
}

.home-product-card {
  max-width: 25rem;
}

.hero-area h6 {
  opacity: 0.5;
}

.category-links {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
  padding: 8rem 0 0;
  margin-bottom: 4rem;
  width: 70rem;
}

.category-link {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.category-link img {
  height: 10rem;
  position: absolute;
  top: -4rem;
}

.category-name {
  border-radius: 0.5rem;
  background: #f1f1f1;
  display: flex;
  flex-direction: column;
  height: 12.75rem;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
}

.area {
  border-radius: 0.5rem;
  display: flex;
  align-items: center;
  width: 100%;
}
/* ... */

